fixed overflow for header on mobile devices

--- a/roots-nextdatagov/assets/less/app.less
+++ b/roots-nextdatagov/assets/less/app.less
@@ -955,6 +955,10 @@ body.single .entry-content .inline-image {
 
 }
 
+.btn-right {
+		float: right;
+}
+
 article.hentry,
 .content-page {
 
@@ -1481,6 +1485,10 @@ figure.alignnone {
     width : 200px;
     margin-top : 0;
   }
+		
+	.btn-right {
+		float: left;		
+	}
 
   ul#menu-primary-navigation li,
   .navbar-header .navbar-brand {
